--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </section>
 
 <section id="ventanaNosotros" class="ventana">
-  <h1 class="section-title">Equipo de trabajo</h1>
+  <h1 class="section-title">Equipo de desarrollo</h1>
   <div class="nosotros-grid">
     <div class="nosotros-item card">
       <div class="card-image">
